# Quizz-app

./: .gitignore  README.md
backend/: .env  .gitignore  CMakeLists.txt  Makefile  conanfile.txt  resetdb.sh  server
backend/src/: cli_migrate  cli_migrate.c  cli_seed  cli_seed.c  main.c  test.c
backend/src/controllers/: controller.c  controller.h
backend/src/controllers/auth/: auth_controller.c  auth_controller.h
backend/src/data_structures/: control_message.h  data.h  data_message.h  index.h
backend/src/db/: connect-db.c  connect-db.h  data.sql  query.sql  trigger.sql  trigger2.sql
backend/src/message_types/: control_message.h  data_message.h  index.h  notification_message.h
backend/src/migrations/: 001_create_questions_table.sql  create_01_user_table.sql  create_02_room_table.sql  create_03_question_table.sql  create_04_answer_of_question_table.sql  create_05_practice_session_table.sql  create_06_exam_table.sql  create_07_exam_question_table.sql  create_08_pratice_question_table.sql  create_09_user_in_room_table.sql  create_10_admin_table.sql  create_11_log_table.sql  create_db_tables.sql  create_room_table.sql  create_user_table.sql  trigger.sql  trigger2.sql  trigger3.sql  trigger4.sql
backend/src/routes/: routes.c  routes.h
backend/src/seeder/: data_1.sql  data_2.sql  data_3.sql  data_4.sql  data_5_demo.sql
backend/src/services/: service.c  service.h
backend/src/utils/: json_utils.c  json_utils.h  log_utils.c  log_utils.h  mysql_utils.c  mysql_utils.h  random_array_utils.c  random_array_utils.h  time_utils.c  time_utils.h
frontend/: .gitignore  (+48 more)
(+25 files in other folders)
